diagnostics/tests/snapshots/overlapping_labels.snap
error[TEST_OVERLAP]: main
 --> order.js:1:3
  |
1 | abcdefghij
  |   ^^^^ ---
  |   | main
  |        | tail
  |    -- overlap
